# random-code

./: .gitignore  README.md
C_Logic_Gates/: CMakeLists.txt  main.c
a random node problem/: CMakeLists.txt  boo.cpp  boo.h  coordinate.cpp  coordinate.h  coordinates.cpp  coordinates.h  foo.cpp  foo.h  line.cpp  line.h  lines.cpp  lines.h  main.cpp
boostvariants/: CMakeLists.txt  main.cpp
daa lab test practice/: BFS.cpp  CMakeLists.txt  dfs.cpp  huffmancode.cpp  knapsack01.cpp  longestcommonsubseq.cpp  maxmatmul.cpp
daa lab test practice/test/: hufftest.cpp  ks01.cpp  lcs.cpp  matmx.cpp
digit-recognizer-mnist/: Digit Recognizer.ipynb
mlpack-svmtest/: CMakeLists.txt  main.cpp
sudoku/: main.cpp
sudoku/src/: sudoku.hpp
sudoku/src/sudoku/: board.hpp
tf/Base/: data visualization.ipynb
tf/tf-basics/: 06-Regression-Exercise.ipynb  08-Classification-Exercise.ipynb  Neural Net.ipynb  lin-cla.ipynb  lin-reg.ipynb  tf-basics.ipynb  tf-graphs.ipynb  tf-var-placeholder.ipynb
tf/tf-cnn/: tf-cifar-cnn.ipynb  tf-mnist-basic.ipynb  tf-mnist-cnn.ipynb
tf/tf-prerequsite/: numpy.ipynb  pandas.ipynb  scikit basics.ipynb
tf/tf-prerequsite/ManualNeuralNetwork/: Manual Neural Network.ipynb
